tests/invalid/type/module_symbol_missing.pts
import test.simple.{missing};

function main() : void {
    missing();
}
